# EvolutionSimulator

./: .gitignore  CMakeLists.txt  LICENSE  README.md  linecount.sh  makefile
inc/: Buffer.hpp  Creature.hpp  CreatureData.hpp  Egg.hpp  EnDex.hpp  Environment.hpp  Food.hpp  Grid.hpp  List.hpp  Meat.hpp  Menu.hpp  MenuBar.hpp  NeuralNetwork.hpp  NewCreature.hpp  PhysicsObj.hpp  Serializer.hpp  Simulation.hpp  SimulationRules.hpp  ThreadPool.hpp  ViteSeg.hpp  macro.hpp  other.hpp
lib/: stb_truetype.h  updateAGL.sh  updateIN.sh  updatePHY.sh
src/: Buffer.cpp  Creature.cpp  CreatureData.cpp  Egg.cpp  Menu.cpp  NeuralNetwork.cpp  NewCreature.cpp  Simulation.cpp  main.cpp  other.cpp
